# myio

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.c  myio.h  run.bat  test.txt
lib/: format_io.c  free.c  include.h  macros.h  obj.c  protos.h  structs.h  user_io.c  w32_io.c
